bugfix navbar and white space

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -116,6 +116,7 @@ nav a:hover {
     nav {
         position: absolute;
         width: 100%;
+        top: 75px;
         left: 0;
         flex-direction: column;
         align-items: center;
